infra/gp-storage-cephcluster/templates/dashboard-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ceph-manager-dashboard
  namespace: rook-ceph
spec:
  # host: ceph-manager-dashboard-rook-ceph.apps.play.ocp.gp.local
  to:
    kind: Service
    name: rook-ceph-mgr-dashboard
  # port:
  #   targetPort: https-dashboard
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  # wildcardPolicy: None
